# pyLabs

./: .gitignore
MathServer/: Dockerfile  alembic.ini  calculation.py  config.py  docker-compose.yml  http_server.py  models.py  requirements.txt  server.py  setup.cfg  setup.py  socket_server.py
MathServer/alembic/: env.py
MathServer/alembic/versions/: 638efc8bd773_setup_indexes.py  6f78041d61ae_setup_multycolumn_index.py
MathServer/http_math_server.egg-info/: PKG-INFO  SOURCES.txt
MathServer/socket_server/: server.py
MathServer/src/: calculation.py  config.py  http_server.py  models.py  socket_server.py
MathServer/src/templates/: limit_and_offset.html
MathServer/test/: test_integration.py  test_module.py
flaskSorting/: Dockerfile  alembic.ini  docker-compose.yml  requirements.txt
flaskSorting/src/: DBInterfase.py  api.py  config.py  handler.py  hashing.py  model.py  sorting.py
flaskSorting/tests/: test_integration.py  test_module.py
test/: test.py
week1/: cat_and_dog.py  cinema.py  cities.py  days.py  difference.py  ipv6.py  line.py  molekule.py  name.py  quadratic.py  register.py  string.py
week2/: dynamic1.py  dynamic2.py  graph.py  levenshtein.py  pi.py  queue.py
week2/sorting/: insertion.py  merge.py  quick.py  selection.py  timer.py
week2/tree/: tree.py  (+1 more)
week3/: params.py  storage.py  timer.py
week4/: bankaccount.py  dunder.py  numbers.py  oop.py  order.py  point3d.py
week6/: row1.sql  row2.sql  row3.sql  row4.sql  row5.sql
week7/: testing_math_server.py
week8/: flask_basic_health_check.py  multi_pi.py  pi.py  timer.py  urls
(+24 files in other folders)
