[metadata]
name = http_math_server
version = 0.8
author = Aleksey
author_email = aleksisgreeby@mail.ru
description = Example of math server
long_description = file: README.md
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packeges = find:
